# titanic

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  Makefile  README.md  clearml_pipeline.py  docker-compose.yml  dvc.yaml  index.html  objects.inv  params.yaml  publish_report.py  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
api/: index.html
data/: index.html
data/processed/: processed_metadata.yaml
data/raw/: train_metadata.yaml
docs/: mkdocs.yml
docs/docs/: data.md  getting-started.md  index.md  modeling.md  troubleshooting.md
docs/docs/api/: index.md
docs/docs/experiments/: Exp-10-01-2026-23cd4498.md  Exp-10-01-2026-6114afbe.md
docs/reports/: hw1_initial.md  hw2.md  hw3.md  hw3_fix.md  hw4.md  hw5.md  hw5_fix.md  hw6.md  hw6_fix.md
experiments/Exp-10-01-2026-23cd4498/: index.html
experiments/Exp-10-01-2026-6114afbe/: index.html
getting-started/: index.html
modeling/: index.html
search/: search_index.json
titanic/: __init__.py  config.py  dataset.py  utils.py
titanic/modeling/: train.py
titanic/schema/: dataset_schema.py  params_schema.py
troubleshooting/: index.html
