[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "titanic"
version = "0.0.1"
description = "Solving simple titanic competition with advanced engineering practices"
authors = [
  { name = "3ndetz" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "loguru",
    "mkdocs",
    "pip",
    "pre-commit",
    "pytest",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
]
requires-python = "==3.12.12"


[tool.ruff]
line-length = 99
src = ["titanic"]
include = ["pyproject.toml", "titanic/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["titanic"]
force-sort-within-sections = true

