[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "titanic"
version = "0.0.1"
description = "Solving simple titanic competition with advanced engineering practices"
authors = [
  { name = "3ndetz" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "dvc>=3.64.0",
    "dvc-gdrive>=3.0.1",
    "loguru==0.7.3",
    "mkdocs==1.6.1",
    "pandas>=2.3.3",
    "pandera[io]>=0.27.0",
    "pip==25.3",
    "pre-commit==4.5.0",
    "pyarrow>=22.0.0",
    "pytest==9.0.1",
    "python-dotenv==1.2.1",
    "ruff==0.14.6",
    "scikit-learn>=1.7.2",
    "tqdm==4.67.1",
    "typer==0.20.0",
]
requires-python = "==3.12.12"


[tool.ruff]
line-length = 99
src = ["titanic"]
include = ["pyproject.toml", "titanic/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["titanic"]
force-sort-within-sections = true

